# vec-ode

./: Cargo.toml  readme.md
src/: lc.rs  lib.rs
src/base/: mod.rs  ode.rs  rk.rs  split_exp.rs
src/core/: mod.rs  ode.rs  split_exp.rs
src/dat/: mod.rs
src/exp/: cfm.rs  magnus.rs  mod.rs  split_exp.rs
src/impls/: mod.rs  nalgebra.rs  ndarray.rs
src/quad/: mod.rs
