[package]
name = "vec_ode"
version = "0.1.0"
authors = ["hmb <humberto.munozb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5"
num-traits = "0.2"
itertools = "0.10"
nalgebra = { version="0.27", optional=true }
ndarray = { version="0.15" }
num-complex = "0.4"
simba = "0.5"

[patch.crates-io]
#alga = { git = "https://github.com/hmunozb/alga", branch = "morphisms" }
#nalgebra = {git = "https://github.com/hmunozb/nalgebra", branch = "dmatrix-vec-space"}