[package]
name = "vec_ode"
version = "0.1.0"
authors = ["hmb <humberto.munozb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5"
num-traits = "0.2.14"
itertools = "0.10.3"
nalgebra = {version="0.29", optional=true}
ndarray = {version="0.15"}
num-complex = "0.4"

